Cambio de correo
a leydyt03@gmail.com

--- a/index.html
+++ b/index.html
@@ -1960,7 +1960,7 @@
               </form>-->
               <div class="contact-form">
                 <h1>Formulario de Contacto</h1>
-                <form action="https://formsubmit.co/jhonkess@hotmail.com" method="POST">
+                <form action="https://formsubmit.co/leydyt03@gmail.com" method="POST">
                     <label for="name">Nombre:</label>
                     <input type="text" id="name" name="name" required>
         
