--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               
                               <!--a con clase ="nav-link dropdown-toggle" de boostrap para estilizar el submenu en dispositivos y su link-->
                                <a class="nav-link show dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                America del norte
+                                America del norte ---
                               </a>
               
                               <!--ul con clase ="dropdown-menu" de boostrap para estilizar los submenus de un menu principal-->
